# app-sdk

./: .gitignore  .pre-commit-config.yaml  API_REFERENCE.md  BREAKING_CHANGES.md  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  Taskfile.yaml  mkdocs.yaml  oasf_record.json  oasf_record_from_a2a.json  pyproject.toml
.github/: CODEOWNERS  release-config.json
.github/workflows/: build-and-test.yaml  release-check.yaml  release.yaml  reusable-python-build-and-test.yaml  reusable-python-build-wheel.yaml
docs/: 0.5.0_AGENTS_MIGRATION.md  0.5.0_BREAKING_CHANGES.md  0.5.0_MIGRATION.md  A2A_USAGE_GUIDE.md  API_REFERENCE.md  GETTING_STARTED_GUIDE.md  MCP_USAGE_GUIDE.md  README.md  USAGE_GUIDE.md  test-coverage.md
docs/stylesheets/: extra.css
examples/autogen_agent/: autogen_agent.py  pyproject.toml
examples/langchain_agent/: langchain_agent.py  pyproject.toml
examples/langchain_agent/simple_weather_agent/: simple_weather_agent.py
examples/mcp/: docker_monitor_server.py  host_monitor_server.py  monitoring_client.py  pyproject.toml
gateway_cli/: cli.py
gateway_sdk/: __cli__.py  base_protocol.py  base_transport.py  bridge.py  factory.py  logging_config.py  message.py
gateway_sdk/a2a/: gateway.py
gateway_sdk/adapters/: asgi_adapter.py  base.py
gateway_sdk/agp/: gateway.py
gateway_sdk/common/: tracing.py
gateway_sdk/nats/: gateway.py
gateway_sdk/protocols/: base_protocol.py  message.py  protocol.py
gateway_sdk/transports/: base_transport.py  transport.py
infra/docker/: docker-compose.yaml
src/agntcy_app_sdk/: app.py  (+5 more)
tests/: docker-compose.yaml  run_a2a_sample_server.py  test_a2a.py  test_nats_transport.py
(+142 files in other folders)
