[project]
name = "gateway-sdk"
version = "0.1.0"
description = ""
authors = [{ name = "Cody Hartsook", email = "codyhartsook@gmail.com" }]
requires-python = "~=3.12"
readme = "README.md"
dependencies = [
    "agp-bindings>=0.2.4,<0.3",
    "nats-py>=2.10.0,<3",
    "cisco-outshift-agent-utils>=0.0.2,<0.0.3",
    "coloredlogs>=15.0.1,<16",
    "python-a2a>=0.5.4",
]

[dependency-groups]
dev = [
    "pytest~=7.0",
    "pytest-asyncio>=0.17.0,<0.18",
    "pytest-cov>=4.0.0,<5",
    "typing-extensions>=4.12.2,<5",
    "autogen-agentchat>=0.4.3,<0.5",
    "autogen-ext>=0.4.3,<0.5",
    "tiktoken>=0.8.0,<0.9",
    "openai>=1.60.2,<2",
    "autogen-core>=0.4.3,<0.5",
    "agp-bindings>=0.2.4,<0.3",
    "coloredlogs>=15.0.1,<16",
    "langchain-anthropic>=0.3.12,<0.4",
    "cisco-outshift-agent-utils==0.0.2",
    "langchain-openai>=0.3.14,<0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
