[tool.poetry]
name = "langchain-agent"
version = "0.0.2"
description = "Agent that retrieves weather using duckduckgo"
authors = ["Lennart Gulikers <lguliker@cisco.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "0.3.23"
langchain-community = "0.3.16"
langchain-openai = "0.2.12"
langgraph = "^0.2.67"
duckduckgo-search = "^7.3.0"
agp-bindings = "^0.2.4"
cisco-outshift-agent-utils = "0.0.2"
langchain-anthropic = "^0.3.12"
coloredlogs = "^15.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
